--- a/Venam/index.html
+++ b/Venam/index.html
@@ -2433,6 +2433,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/selectionbar.js"></script>
+    <script src="assets/js/slider.js"></script>
 </body>
 
 </html>
