added all pages

--- a/Venam/index.html
+++ b/Venam/index.html
@@ -1554,16 +1554,16 @@
                                     <div class="star-rating w-50">
                                         <div class="feedback">
                                             <div class="rating">
-                                                <input type="radio" name="rating-i" id="rating-5-i">
-                                                <label for="rating-5-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-4-i">
-                                                <label for="rating-4-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-3-i">
-                                                <label for="rating-3-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-2-i">
-                                                <label for="rating-2-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-1-i">
-                                                <label for="rating-1-i"></label>
+                                                <input type="radio" name="rating-a" id="rating-5-a" disabled>
+                                                <label for="rating-5-a"></label>
+                                                <input type="radio" name="rating-a" id="rating-4-a" checked disabled>
+                                                <label for="rating-4-a"></label>
+                                                <input type="radio" name="rating-a" id="rating-3-a" disabled>
+                                                <label for="rating-3-a"></label>
+                                                <input type="radio" name="rating-a" id="rating-2-a" disabled>
+                                                <label for="rating-2-a"></label>
+                                                <input type="radio" name="rating-a" id="rating-1-a" disabled>
+                                                <label for="rating-1-a"></label>
                                             </div>
                                         </div>
                                     </div>
@@ -1602,16 +1602,16 @@
                                     <div class="star-rating w-50">
                                         <div class="feedback">
                                             <div class="rating">
-                                                <input type="radio" name="rating-i" id="rating-5-i">
-                                                <label for="rating-5-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-4-i">
-                                                <label for="rating-4-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-3-i">
-                                                <label for="rating-3-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-2-i">
-                                                <label for="rating-2-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-1-i">
-                                                <label for="rating-1-i"></label>
+                                                <input type="radio" name="rating-b" id="rating-5-b" disabled>
+                                                <label for="rating-5-b"></label>
+                                                <input type="radio" name="rating-b" id="rating-4-b" disabled>
+                                                <label for="rating-4-b"></label>
+                                                <input type="radio" name="rating-b" id="rating-3-b" checked disabled>
+                                                <label for="rating-3-b"></label>
+                                                <input type="radio" name="rating-b" id="rating-2-b" disabled>
+                                                <label for="rating-2-b"></label>
+                                                <input type="radio" name="rating-b" id="rating-1-b" disabled>
+                                                <label for="rating-1-b"></label>
                                             </div>
                                         </div>
                                     </div>
@@ -1650,16 +1650,16 @@
                                     <div class="star-rating w-50">
                                         <div class="feedback">
                                             <div class="rating">
-                                                <input type="radio" name="rating-i" id="rating-5-i">
-                                                <label for="rating-5-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-4-i">
-                                                <label for="rating-4-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-3-i">
-                                                <label for="rating-3-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-2-i">
-                                                <label for="rating-2-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-1-i">
-                                                <label for="rating-1-i"></label>
+                                                <input type="radio" name="rating-c" id="rating-5-c" disabled>
+                                                <label for="rating-5-c"></label>
+                                                <input type="radio" name="rating-c" id="rating-4-c" checked disabled>
+                                                <label for="rating-4-c"></label>
+                                                <input type="radio" name="rating-c" id="rating-3-c" disabled>
+                                                <label for="rating-3-c"></label>
+                                                <input type="radio" name="rating-c" id="rating-2-c" disabled>
+                                                <label for="rating-2-c"></label>
+                                                <input type="radio" name="rating-c" id="rating-1-c" disabled>
+                                                <label for="rating-1-c"></label>
                                             </div>
                                         </div>
                                     </div>
@@ -1698,16 +1698,16 @@
                                     <div class="star-rating w-50">
                                         <div class="feedback">
                                             <div class="rating">
-                                                <input type="radio" name="rating-i" id="rating-5-i">
-                                                <label for="rating-5-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-4-i">
-                                                <label for="rating-4-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-3-i">
-                                                <label for="rating-3-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-2-i">
-                                                <label for="rating-2-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-1-i">
-                                                <label for="rating-1-i"></label>
+                                                <input type="radio" name="rating-d" id="rating-5-d" disabled>
+                                                <label for="rating-5-d"></label>
+                                                <input type="radio" name="rating-d" id="rating-4-d" disabled>
+                                                <label for="rating-4-d"></label>
+                                                <input type="radio" name="rating-d" id="rating-3-d" checked disabled>
+                                                <label for="rating-3-d"></label>
+                                                <input type="radio" name="rating-d" id="rating-2-d" disabled>
+                                                <label for="rating-2-d"></label>
+                                                <input type="radio" name="rating-d" id="rating-1-d" disabled>
+                                                <label for="rating-1-d"></label>
                                             </div>
                                         </div>
                                     </div>
@@ -1746,16 +1746,16 @@
                                     <div class="star-rating w-50">
                                         <div class="feedback">
                                             <div class="rating">
-                                                <input type="radio" name="rating-i" id="rating-5-i">
-                                                <label for="rating-5-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-4-i">
-                                                <label for="rating-4-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-3-i">
-                                                <label for="rating-3-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-2-i">
-                                                <label for="rating-2-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-1-i">
-                                                <label for="rating-1-i"></label>
+                                                <input type="radio" name="rating-e" id="rating-5-e" disabled>
+                                                <label for="rating-5-e"></label>
+                                                <input type="radio" name="rating-e" id="rating-4-e" disabled>
+                                                <label for="rating-4-e"></label>
+                                                <input type="radio" name="rating-e" id="rating-3-e" disabled>
+                                                <label for="rating-3-e"></label>
+                                                <input type="radio" name="rating-e" id="rating-2-e" checked disabled>
+                                                <label for="rating-2-e"></label>
+                                                <input type="radio" name="rating-e" id="rating-1-e" disabled>
+                                                <label for="rating-1-e"></label>
                                             </div>
                                         </div>
                                     </div>
@@ -1794,16 +1794,16 @@
                                     <div class="star-rating w-50">
                                         <div class="feedback">
                                             <div class="rating">
-                                                <input type="radio" name="rating-i" id="rating-5-i">
-                                                <label for="rating-5-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-4-i">
-                                                <label for="rating-4-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-3-i">
-                                                <label for="rating-3-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-2-i">
-                                                <label for="rating-2-i"></label>
-                                                <input type="radio" name="rating-i" id="rating-1-i">
-                                                <label for="rating-1-i"></label>
+                                                <input type="radio" name="rating-f" id="rating-5-f" checked disabled>
+                                                <label for="rating-5-f"></label>
+                                                <input type="radio" name="rating-f" id="rating-4-f" disabled>
+                                                <label for="rating-4-f"></label>
+                                                <input type="radio" name="rating-f" id="rating-3-f" disabled>
+                                                <label for="rating-3-f"></label>
+                                                <input type="radio" name="rating-f" id="rating-2-f" disabled>
+                                                <label for="rating-2-f"></label>
+                                                <input type="radio" name="rating-f" id="rating-1-f" disabled>
+                                                <label for="rating-1-f"></label>
                                             </div>
                                         </div>
                                     </div>
