--- a/Venam/login.html
+++ b/Venam/login.html
@@ -568,7 +568,9 @@
                                 A password will be sent to your email address.
                             </p>
                             <p>
-                                Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="">privacy policy</a>.
+                                Your personal data will be used to support your experience throughout this website, to
+                                manage access to your account, and for other purposes described in our <a
+                                    href="">privacy policy</a>.
                             </p>
                             <button type="submit" class="btn my-3">REGISTER</button>
                         </form>
