--- a/Venam/product.html
+++ b/Venam/product.html
@@ -1442,7 +1442,8 @@
                             </div>
                         </div>
                         <form>
-                            <select class="form-select rating-select my-3 py-2 px-3" aria-label="Default select example">
+                            <select class="form-select rating-select my-3 py-2 px-3"
+                                aria-label="Default select example">
                                 <option selected>Rate...</option>
                                 <option value="1">Perfect</option>
                                 <option value="2">Good</option>
