--- a/Venam/index.html
+++ b/Venam/index.html
@@ -104,6 +104,7 @@
                     <i class="fa-solid fa-heart"></i>
                     <a class="d-flex justify-content-center align-items-center" href="cart.html">
                         <i class="fa-solid fa-bag-shopping"></i>
+                        <span id="cart-html-count">0</span>
                     </a>
                 </div>
             </div>
@@ -2499,6 +2500,7 @@
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/cart.js"></script>
     <script src="assets/js/selectionbar.js"></script>
     <script src="assets/js/slider.js"></script>
     <script src="assets/js/timer.js"></script>
