--- a/Venam/product.html
+++ b/Venam/product.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="links d-flex justify-content-between">
-                    <i class="fa-solid fa-user"></i>
+                    <a class="d-flex justify-content-center align-items-center" href="login.html"><i class="fa-solid fa-user"></i></a>
                     <i class="fa-solid fa-arrows-rotate"></i>
                     <i class="fa-solid fa-heart"></i>
                     <a class="d-flex justify-content-center align-items-center" href="cart.html">
